--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "scripts": {
     "start": "./bin/webpack-dev-server",
     "test": "node_modules/.bin/karma start karma.conf.js"
+  },
+  "engines": {
+    "node": ">=4.0"
   }
 }
